feat: 1. add /auth/forgot-password endpoint
